Update some old functions